@@ -20,6 +20,9 @@
   * Add support for retrieving tarballs from remote servers.
     (Jelmer Vernooij, #379087)
 
+  * New method ``update_server_info`` which generates data
+    for dumb server access. (Jelmer Vernooij, #731235)
+
 0.8.1	2011-10-31
 
  FEATURES
